syntax = "proto3";

package protos;

option go_package = ".";

service Storage {
  rpc Read(ReadRequest) returns (State) { }
  rpc Write(State) returns (WriteResponse) { }
}

message State {
  int64 Id = 1;
  string Value = 2;
  int64 Timestamp = 3;
}

message WriteResponse {}

message ReadRequest {}
